force-app/main/default/objects/Shift_Assignment__c/Shift_Assignment__c.object-meta.xml
<CustomObject>
    <label>Shift Assignment</label>
    <nameField>
        <displayFormat>SA-{000000}</displayFormat>
        <label>Shift Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shift Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>