force-app/main/default/objects/Shift_Assignment__c/fields/Assigned_By__c.field-meta.xml
<CustomField>
    <fullName>Assigned_By__c</fullName>
    <label>Assigned By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Shift Assignments</relationshipLabel>
    <relationshipName>ShiftAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>