force-app/main/default/objects/Shift_Assignment__c/fields/Assignment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assignment Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>