force-app/main/default/objects/Shift_Assignment__c/fields/Assignment_Score__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Score__c</fullName>
    <label>Assignment Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>