force-app/main/default/objects/Shift_Assignment__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Shift Assignments</relationshipLabel>
    <relationshipName>Shift_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>