force-app/main/default/objects/Shift_Assignment__c/fields/Shift__c.field-meta.xml
<CustomField>
    <fullName>Shift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shift</label>
    <referenceTo>Shift__c</referenceTo>
    <relationshipLabel>Shift Assignments</relationshipLabel>
    <relationshipName>Shift_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>