force-app/main/default/objects/Shift_Assignment__c/fields/Shift_Template__c.field-meta.xml
<CustomField>
    <fullName>Shift_Template__c</fullName>
    <label>Shift Template</label>
    <referenceTo>Shift_Template__c</referenceTo>
    <relationshipLabel>Shift Assignments</relationshipLabel>
    <relationshipName>ShiftAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>